--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,54 +12,18 @@ on:
       - main
       - master
 
-env:
-  DOCKER_BUILDKIT: 1
-
 jobs:
-  build_unbound_exporter:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Create folder for images
-        run: |
-          sudo mkdir -p /images
-          sudo chmod 777 /images
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Build image
-        run: docker build -t horaynarea/unbound_exporter:latest .
-
-      - name: Save image
-        run: docker save horaynarea/unbound_exporter -o /images/unbound_exporter.tar.gz
-
-      - name: Cache image
-        uses: actions/cache@v4
-        with:
-          path: /images/unbound_exporter.tar.gz
-          key: ${{ github.run_id }}-${{ github.run_number }}-unbound_exporter
-
-  push_images:
-    needs: build_unbound_exporter
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-
-      - name: Create folder for images
-        run: |
-          sudo mkdir -p /images
-          sudo chmod 777 /images
-
-      - name: Load unbound_exporter cache
-        uses: actions/cache@v4
-        with:
-          path: /images/unbound_exporter.tar.gz
-          key: ${{ github.run_id }}-${{ github.run_number }}-unbound_exporter
-
-      - name: Load docker images
-        run: |
-          docker load -i /images/unbound_exporter.tar.gz
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -67,5 +31,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push images
-        run: docker push horaynarea/unbound_exporter:latest
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: |
+            linux/amd64
+            linux/arm64
+          push: true
+          tags: horaynarea/unbound_exporter:latest
