--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,7 @@ jobs:
           platforms: |
             linux/amd64
             linux/arm64
+            linux/arm/v7
+            linux/arm/v6
           push: true
           tags: horaynarea/unbound_exporter:latest
