--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,6 @@ on:
   push:
     branches:
       - main
-      - master
 
 jobs:
   build_and_push:
@@ -31,6 +30,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: HorayNarea
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -41,4 +47,6 @@ jobs:
             linux/arm/v7
             linux/arm/v6
           push: true
-          tags: horaynarea/unbound_exporter:latest
+          tags: |
+            horaynarea/unbound_exporter:latest
+            ghcr.io/horaynarea/unbound_exporter:latest
